updated helper function with sensor and temperature mapping